# Finance-Tracker

./: .gitignore  INSTALL.md  README.md  install.ps1  install.sh  openIssues.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/: embedder.py  ollama_client.py
backend/app/core/: backup.py  config.py  logging.py
backend/app/db/: database.py  merchant_memory.py  models.py  vector_store.py
backend/app/db/migrations/: 002_add_accounts.sql
backend/app/pipeline/: context.py  runner.py
backend/app/pipeline/steps/: base.py  categorizer.py  enricher.py  parser.py
backend/app/routers/: accounts.py  labels.py  merchant_rules.py  reports.py  transactions.py  transfers.py  upload.py
backend/app/schemas/: schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: DropZone.tsx  MetaForm.tsx  TransactionDrawer.tsx
frontend/src/pages/: AccountsModal.tsx  Labels.tsx  Reconcile.tsx  Reports.tsx  SetupModal.tsx  Statements.tsx  Transfers.tsx  Upload.tsx
frontend/src/types/: index.ts
scripts/: reset_db.py  restart.sh  restore_db.py  seed_labels.py  test_categorizer.py  test_merchant_memory.py  test_parser.py
